--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ html {
    --darker-grey:#2e2d34;
    --black: #201f24;
 
+   scroll-behavior: smooth;
 }
 
 
@@ -33,7 +34,7 @@ h1 {
 }
 
 h2 {
-   font-size: 1rem;
+   font-size: 1.3rem;
    font-weight: 400;
    text-transform: uppercase;
    margin-bottom: 0.8rem;
@@ -53,24 +54,40 @@ h4 {
 }
 
 .button {
-   padding: 10px 14px;
-   background-color: var(--darker-grey);
+   padding: 8px 26px;
+   background-color: rgba(0, 0, 0, 0.6);
    border: solid 1px var(--red);
-   border-radius: 30px;
+   border-radius: 20px;
    font-size: 0.9rem;
    color: var(--white);
    max-width: 200px;
    text-align: center;
 }
 
+.button:hover {
+   background-color: var(--red);
+}
+
+.button:active {
+   transform: scale(0.95);
+}
+
+
 .container {
-   background-color: #201f24;
+   background-color:var(--black);
    background-image: url("images/bg_black.png");
    background-size: 35%;
    background-repeat: repeat;
-   height: 100%;
+   min-height: 100vh;
 
    cursor: url(images/icons/cursor.svg), auto;
+
+   display: grid;
+   grid-template:
+      "top-nav" auto
+      "main" 1fr
+      "footer" auto /
+      1fr;
 }
 
 .dropshadow  {
@@ -84,11 +101,20 @@ h4 {
 .input {
    background-color:var(--light-grey);
    border: solid 1px var(--red);
-   border-radius: 30px;
    font-size: 0.9rem;
+   padding: 8px 18px;
+   border-radius: 20px;
+   max-width: 200px;
+}
 
-   padding: 10px 14px;
-
+.info-form {
+   display: block;
+   background-color:var(--light-grey);
+   font-size: 0.9rem;
+   padding: 10px;
+   border-radius: 3px;
+   width: 200px;
+   margin-bottom: 15px;
 }
 
 .wrapper {
@@ -105,6 +131,8 @@ h4 {
 /* TOP NAV  */
 
 .top-nav {
+   grid-area: top-nav;
+
    display: grid;
    grid-template-columns: 40px 40px 1fr 40px 40px;
    place-items: center;
@@ -133,11 +161,31 @@ h4 {
    animation-duration: .2s;
 }
 
+.top-nav .dropmenu {
+   position: relative;
+}
+
+.top-nav .dropdown {
+   display: none;
+
+   position: absolute;
+}
+
+.top-nav .dropmenu:hover .dropdown {
+   display: block;
+}
+
 @keyframes basket {
    0% {transform:rotate(0deg);}
    30% {transform:rotate(5deg);}
    100% {transform:rotate(-5deg);}
    
+}
+
+/* MAIN  */
+
+.main {
+   grid-area: main;
 }
 
 /* HERO */
@@ -149,14 +197,16 @@ h4 {
 }
 
 .hero {
-   width: 550px;
    text-align: center;
    color: var(--white);
 }
 
+.hero h1 {
+   text-align: center;
+}
+
 .hero .view-menu,
 .hero .book-table {
-   width: 120px;
    display: inline-block;
    margin: 5px 5px;
 }
@@ -209,6 +259,8 @@ h4 {
 /* FOOTER */
 
 .footer {
+grid-area: footer;
+
    background-color: var(--red);
    display: grid;
    grid-template-columns: 1fr auto;
@@ -249,17 +301,29 @@ h4 {
 
 .booking {
    display: grid;
-   grid-template-columns: 2fr 1fr;
+   grid-template-columns: 2fr 200px;
+   gap: 25px;
+   color: white;
 }
 
-.booking .aside {
-   width: 100px;
-   height: 200px;
+.form {
+   display: grid;
+   grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
+   gap: 15px;
+   padding: 20px;
 }
 
-.booking .aside img {
-   height: 200%;
+.booking .info-form {
+   
+}
+
+.aside {
+overflow: hidden;
+}
+
+.side-pic {
    object-fit: cover;
+   object-position: -100px;
 }
 
 
@@ -267,7 +331,7 @@ h4 {
 /* MENU PAGE  */
 
 .food-section {
-   height: 90vh;
+   height: 70vh;
    overflow: scroll;
 }
 
@@ -295,21 +359,21 @@ h4 {
 .food .title {
    color: white;
    text-align: center;
-   font-size: 1.3rem;
 }
 
 .starters,
 .mains,
 .sides {
    display: grid;
-   grid-template-columns:repeat(auto-fit, minmax(225px,auto));
-
+   grid-template-columns:repeat(auto-fit, minmax(225px,1fr));
+   place-items: center;
    gap: 20px;
    margin-bottom: 25px;
 }
 
 .mealcard {
    background-color: var(--light-grey);
+   max-width: 330px;
    border-radius: 10px;
    padding: 15px;
    text-align: center;
@@ -354,7 +418,7 @@ h4 {
    color: white;
 
    position: absolute;
-   left: 10px;
+   right: 10px;
    top: 10px;
 }
 
@@ -375,7 +439,7 @@ h4 {
 .mealcard .name {
    font-size:medium;
    color: var(--red);
-margin: 5px 0px;
+   margin: 5px 0px;
 }
 
 .mealcard .price {
@@ -394,16 +458,64 @@ color: var(--dark-grey);
    margin: 20px 0;
 }
 
-@media screen and (max-width:800px) {
-   .footer {
+
+@media screen and (max-width:450px) {
+   .container {
+      grid-template:
+      "main" 1fr 
+      "top-nav" auto /
+         1fr;
+
+      height: 100vh;
+   }
+
+   .body {
+      height: 100%;
+      overflow: hidden;
+   }
+
+   .footer{
       display: none;
    }
-   .top-nav {
-      position: fixed;
-      bottom: 0;
-      width: 100vw;
-      z-index: 10;
+
+   .main {
+      overflow: scroll;
+   }
+}
+
+@media screen and (max-width:800px) {
+
+   .wrapper {
+      padding: 2rem;
    }
 
+   .subscribe {
+      text-align: center;
+   }
 
+   .gallery {
+      grid-template-columns: 30px auto 30px;
+   }
+   .picextra {
+      display: none;
+   }
+
+}
+
+@media screen and (max-width:500px){
+   /* menu page  */
+
+   .mealcard .dish {
+      max-width: 80px;
+   }
+
+   .mealcard {
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      place-items: center;
+   }
+
+   .aside {
+      display: none;
+   }
 }
