--- a/style.css
+++ b/style.css
@@ -26,18 +26,26 @@ a {
    font-weight: 600;
 }
 
+a:visited {
+   color: white;
+}
+
 h1 {
    font-size: 2.5rem;
    font-weight: 600;
    text-transform: uppercase;
-   margin-bottom: 0.8rem;
+   word-spacing: 0.3ch;
+   text-shadow: 0px 0px 4px rgba(0,0,0,0.6);
 }
 
 h2 {
    font-size: 1.3rem;
    font-weight: 400;
    text-transform: uppercase;
-   margin-bottom: 0.8rem;
+   margin-top: 0.3rem;
+   margin-bottom: 0.9rem;
+   word-spacing: 0.5ch;
+   text-shadow: 0px 0px 4px rgba(0,0,0,0.6);
 }
 
 h3 {
@@ -51,6 +59,11 @@ h4 {
    font-size: 0.5rem;
    text-transform: uppercase;
    margin-bottom: 0.8rem;
+}
+
+ol {
+   padding-inline-start: 0;
+   list-style: none;
 }
 
 .button {
@@ -167,12 +180,23 @@ h4 {
 
 .top-nav .dropdown {
    display: none;
-
    position: absolute;
 }
 
 .top-nav .dropmenu:hover .dropdown {
    display: block;
+}
+
+.dropdown li{
+   background-color: var(--black);
+   border: solid 1px var(--red);
+   border-radius: 0 0 20px 0;
+   padding: 5px;
+   width: 110px;
+}
+
+.dropdown li:hover {
+   background-color: var(--darker-grey);
 }
 
 @keyframes basket {
@@ -191,7 +215,8 @@ h4 {
 /* HERO */
 
 .hero-section{
-   background-image: url(images/500_F_269909534_p304vArsMXZLsYuz6Ab0nqRs55GRahnF.jpg);
+   background-color: black;
+   background-image: url(images/hero_index_d.jpg);
    background-size: 100%;
    background-position: center;
 }
@@ -203,6 +228,7 @@ h4 {
 
 .hero h1 {
    text-align: center;
+
 }
 
 .hero .view-menu,
@@ -226,7 +252,7 @@ h4 {
 /* SUBSCRIBE */
 
 .subscribe-section {
-   background-image: url(images/500_F_255497620_pEVnbqHwArEP6rCHmw8CZbcUY3tP4lCk.jpg);
+   background-image: url(images/subscribe_banner.jpeg);
    background-size: 100%;
    background-position: center;
 }
@@ -250,6 +276,10 @@ h4 {
 
 .gallery .pic {
    max-width: 150px;
+}
+
+.gallery .pic:hover {
+   transform: scale(1.1);
 }
 
 .chevron {
